Создано с помощью Colaboratory

--- a/Seq2Seq.ipynb
+++ b/Seq2Seq.ipynb
@@ -521,11 +521,7 @@
       "metadata": {
         "id": "AC4KuILy3WSt",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "outputId": "a56fe94b-adb6-46b3-b2ef-d3ab97d839c5"
+        "colab": {}
       },
       "source": [
         "model.fit_generator(batch_generator(df_train[df_train['order_number'] != 1][['prod_seq', 'prev_seq']].values, batch_size, token_to_id), \n",
@@ -534,151 +530,7 @@
         "                    validation_steps=df_val.shape[0]//batch_size,  verbose=1, callbacks=callbacks_list)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Epoch 1/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.7044 - sparse_categorical_accuracy: 0.0895Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:26 - loss: 3.1111 - sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 00001: val_loss improved from inf to 3.11109, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:001_loss:3.703_accuracy:0.089_valloss:3.111_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1255s 784ms/step - loss: 3.7031 - sparse_categorical_accuracy: 0.0895 - val_loss: 3.1111 - val_sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 2/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.6873 - sparse_categorical_accuracy: 0.0949Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:25 - loss: 3.0885 - sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 00002: val_loss improved from 3.11109 to 3.08849, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:002_loss:3.687_accuracy:0.095_valloss:3.088_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1246s 778ms/step - loss: 3.6875 - sparse_categorical_accuracy: 0.0949 - val_loss: 3.0885 - val_sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 3/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.6638 - sparse_categorical_accuracy: 0.0943Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:24 - loss: 3.0549 - sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 00003: val_loss improved from 3.08849 to 3.05492, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:003_loss:3.663_accuracy:0.094_valloss:3.055_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1254s 783ms/step - loss: 3.6627 - sparse_categorical_accuracy: 0.0943 - val_loss: 3.0549 - val_sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 4/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.6065 - sparse_categorical_accuracy: 0.0946Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:19 - loss: 2.9994 - sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 00004: val_loss improved from 3.05492 to 2.99944, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:004_loss:3.607_accuracy:0.095_valloss:2.999_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1260s 787ms/step - loss: 3.6067 - sparse_categorical_accuracy: 0.0946 - val_loss: 2.9994 - val_sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 5/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.5466 - sparse_categorical_accuracy: 0.0947Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:35 - loss: 2.9491 - sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 00005: val_loss improved from 2.99944 to 2.94911, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:005_loss:3.546_accuracy:0.095_valloss:2.949_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1257s 785ms/step - loss: 3.5460 - sparse_categorical_accuracy: 0.0947 - val_loss: 2.9491 - val_sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 6/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.4879 - sparse_categorical_accuracy: 0.0947Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:51 - loss: 2.9105 - sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 00006: val_loss improved from 2.94911 to 2.91047, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:006_loss:3.489_accuracy:0.095_valloss:2.910_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1264s 789ms/step - loss: 3.4888 - sparse_categorical_accuracy: 0.0947 - val_loss: 2.9105 - val_sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 7/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.4514 - sparse_categorical_accuracy: 0.0943Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:50 - loss: 2.8880 - sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 00007: val_loss improved from 2.91047 to 2.88798, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:007_loss:3.451_accuracy:0.094_valloss:2.888_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1260s 787ms/step - loss: 3.4510 - sparse_categorical_accuracy: 0.0943 - val_loss: 2.8880 - val_sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 8/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.4234 - sparse_categorical_accuracy: 0.0945Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:46 - loss: 2.8596 - sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 00008: val_loss improved from 2.88798 to 2.85960, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:008_loss:3.424_accuracy:0.094_valloss:2.860_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1264s 790ms/step - loss: 3.4237 - sparse_categorical_accuracy: 0.0945 - val_loss: 2.8596 - val_sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 9/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.3863 - sparse_categorical_accuracy: 0.0948Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:29 - loss: 2.8349 - sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 00009: val_loss improved from 2.85960 to 2.83486, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:009_loss:3.386_accuracy:0.095_valloss:2.835_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1251s 782ms/step - loss: 3.3865 - sparse_categorical_accuracy: 0.0948 - val_loss: 2.8349 - val_sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 10/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.3450 - sparse_categorical_accuracy: 0.0949Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:20 - loss: 2.8091 - sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 00010: val_loss improved from 2.83486 to 2.80910, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:010_loss:3.345_accuracy:0.095_valloss:2.809_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1244s 777ms/step - loss: 3.3448 - sparse_categorical_accuracy: 0.0949 - val_loss: 2.8091 - val_sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 11/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.3311 - sparse_categorical_accuracy: 0.0948Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:24 - loss: 2.7882 - sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 00011: val_loss improved from 2.80910 to 2.78816, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:011_loss:3.332_accuracy:0.095_valloss:2.788_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1244s 777ms/step - loss: 3.3316 - sparse_categorical_accuracy: 0.0948 - val_loss: 2.7882 - val_sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 12/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.3046 - sparse_categorical_accuracy: 0.0946Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:22 - loss: 2.7658 - sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 00012: val_loss improved from 2.78816 to 2.76579, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:012_loss:3.305_accuracy:0.095_valloss:2.766_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1251s 781ms/step - loss: 3.3050 - sparse_categorical_accuracy: 0.0946 - val_loss: 2.7658 - val_sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 13/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.2800 - sparse_categorical_accuracy: 0.0945Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:25 - loss: 2.7440 - sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 00013: val_loss improved from 2.76579 to 2.74399, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:013_loss:3.280_accuracy:0.094_valloss:2.744_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1248s 780ms/step - loss: 3.2803 - sparse_categorical_accuracy: 0.0945 - val_loss: 2.7440 - val_sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 14/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.2555 - sparse_categorical_accuracy: 0.0945Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:41 - loss: 2.7273 - sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 00014: val_loss improved from 2.74399 to 2.72734, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:014_loss:3.256_accuracy:0.095_valloss:2.727_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1248s 779ms/step - loss: 3.2561 - sparse_categorical_accuracy: 0.0945 - val_loss: 2.7273 - val_sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 15/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.2246 - sparse_categorical_accuracy: 0.0947Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:43 - loss: 2.7089 - sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 00015: val_loss improved from 2.72734 to 2.70895, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:015_loss:3.225_accuracy:0.095_valloss:2.709_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1263s 789ms/step - loss: 3.2250 - sparse_categorical_accuracy: 0.0947 - val_loss: 2.7089 - val_sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 16/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.1994 - sparse_categorical_accuracy: 0.0950Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:20 - loss: 2.6949 - sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 00016: val_loss improved from 2.70895 to 2.69488, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:016_loss:3.199_accuracy:0.095_valloss:2.695_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1240s 775ms/step - loss: 3.1992 - sparse_categorical_accuracy: 0.0951 - val_loss: 2.6949 - val_sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 17/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.1876 - sparse_categorical_accuracy: 0.0946Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:23 - loss: 2.6761 - sparse_categorical_accuracy: 0.0975\n",
-            "Epoch 00017: val_loss improved from 2.69488 to 2.67609, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:017_loss:3.187_accuracy:0.095_valloss:2.676_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1258s 786ms/step - loss: 3.1874 - sparse_categorical_accuracy: 0.0946 - val_loss: 2.6761 - val_sparse_categorical_accuracy: 0.0975\n",
-            "Epoch 18/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.1673 - sparse_categorical_accuracy: 0.0944Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:18 - loss: 2.6568 - sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 00018: val_loss improved from 2.67609 to 2.65682, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:018_loss:3.167_accuracy:0.094_valloss:2.657_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1248s 780ms/step - loss: 3.1672 - sparse_categorical_accuracy: 0.0944 - val_loss: 2.6568 - val_sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 19/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.1419 - sparse_categorical_accuracy: 0.0949Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:21 - loss: 2.6397 - sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 00019: val_loss improved from 2.65682 to 2.63968, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:019_loss:3.143_accuracy:0.095_valloss:2.640_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1254s 783ms/step - loss: 3.1432 - sparse_categorical_accuracy: 0.0948 - val_loss: 2.6397 - val_sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 20/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.1275 - sparse_categorical_accuracy: 0.0947Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:19 - loss: 2.6251 - sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 00020: val_loss improved from 2.63968 to 2.62508, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:020_loss:3.127_accuracy:0.095_valloss:2.625_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1248s 779ms/step - loss: 3.1271 - sparse_categorical_accuracy: 0.0947 - val_loss: 2.6251 - val_sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 21/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.1087 - sparse_categorical_accuracy: 0.0944Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:19 - loss: 2.6096 - sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 00021: val_loss improved from 2.62508 to 2.60957, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:021_loss:3.109_accuracy:0.094_valloss:2.610_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1244s 777ms/step - loss: 3.1087 - sparse_categorical_accuracy: 0.0944 - val_loss: 2.6096 - val_sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 22/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.0918 - sparse_categorical_accuracy: 0.0942Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:28 - loss: 2.5967 - sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 00022: val_loss improved from 2.60957 to 2.59669, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:022_loss:3.092_accuracy:0.094_valloss:2.597_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1258s 786ms/step - loss: 3.0916 - sparse_categorical_accuracy: 0.0942 - val_loss: 2.5967 - val_sparse_categorical_accuracy: 0.0976\n",
-            "Epoch 23/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.0740 - sparse_categorical_accuracy: 0.0948Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:20 - loss: 2.5812 - sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 00023: val_loss improved from 2.59669 to 2.58124, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:023_loss:3.073_accuracy:0.095_valloss:2.581_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1251s 781ms/step - loss: 3.0733 - sparse_categorical_accuracy: 0.0948 - val_loss: 2.5812 - val_sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 24/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.0543 - sparse_categorical_accuracy: 0.0948Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:17 - loss: 2.5693 - sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 00024: val_loss improved from 2.58124 to 2.56931, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:024_loss:3.054_accuracy:0.095_valloss:2.569_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1251s 782ms/step - loss: 3.0545 - sparse_categorical_accuracy: 0.0947 - val_loss: 2.5693 - val_sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 25/25\n",
-            "1600/1601 [============================>.] - ETA: 0s - loss: 3.0343 - sparse_categorical_accuracy: 0.0948Epoch 1/25\n",
-            " 206/1601 [==>...........................] - ETA: 10:21 - loss: 2.5611 - sparse_categorical_accuracy: 0.0977\n",
-            "Epoch 00025: val_loss improved from 2.56931 to 2.56113, saving model to /content/drive/My Drive/Colab Notebooks/Diplom/models/seq2seq/2seq2seq_epochs:025_loss:3.034_accuracy:0.095_valloss:2.561_valaccuracy:0.098.hdf5\n",
-            "1601/1601 [==============================] - 1245s 777ms/step - loss: 3.0340 - sparse_categorical_accuracy: 0.0948 - val_loss: 2.5611 - val_sparse_categorical_accuracy: 0.0977\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f1920bebda0>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 32
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
